WindGroup Dev/src/objects/Billing_Due_Day__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Due_Days__c</fullName>
        <label>Billing Due Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-Hoc Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Debit Note</fullName>
                </value>
                <value>
                    <fullName>GTO Rent</fullName>
                </value>
                <value>
                    <fullName>Late Charge</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Billing Due Days</relationshipLabel>
        <relationshipName>Billing_Due_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Billing Due Day</label>
    <nameField>
        <displayFormat>BDD-{0000}</displayFormat>
        <label>Billing Due Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Due Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>